to Email backend

--- a/cerfa_filler/templates/base.html
+++ b/cerfa_filler/templates/base.html
@@ -37,7 +37,7 @@ main > .container {
                             {% endif %}
 
                         <li class="nav-item">
-                            <form action="{% url 'accounts:logout' %}" method="post">
+                            <form action="{% url 'logout' %}" method="post">
                                 {% csrf_token %}
                                 <input type="submit" class="nav-link" value="🔒 Quitter ({{user.username}})"/>
                             </form>
