--- a/cerfa_filler/templates/private_individual_list.html
+++ b/cerfa_filler/templates/private_individual_list.html
@@ -3,15 +3,14 @@
 {% load django_bootstrap5 i18n %}
 
 {% block title %}
-  {% translate 'individuals list' %}
+  Liste des personnes physiques
 {% endblock %}
 
 {% block content %}
   <div class="row">
     <div class="col-12">
       <div class="m-3">
-        <h2>{% translate 'individuals' %}</h2>
-
+        <h2>Personnes physiques</h2>
         <!-- Formulaire pour la validation des données en masse -->
       </div>
     </div>
