--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
 <section class="bg-light py-3 py-md-5 mh-100">
   <div class="container">
     <div class="row justify-content-center">
-                        {% bootstrap_messages %}
+      {% bootstrap_messages %}
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
         <div class="card border border-light-subtle rounded-3 shadow-sm">
           <div class="card-body p-3 p-md-4 p-xl-5">
@@ -17,6 +17,8 @@
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% bootstrap_button button_type="submit" content="Se connecter" %}
+                </form>
+                <a href="{% url  'password_reset' %}">Reset password</a>
           </div>
         </div>
       </div>
