--- a/templates/registration/password_reset_form copy.html
+++ b/templates/registration/password_reset_form copy.html
@@ -12,12 +12,13 @@
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
         <div class="card border border-light-subtle rounded-3 shadow-sm">
           <div class="card-body p-3 p-md-4 p-xl-5">
-            <h2 class="text-center mb-4">Modifiez votre mot de passe</h2>
+            <h2 class="text-center mb-4">Mot de passe oublié?</h2>
                 <form method="post">
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                    {% bootstrap_button button_type="submit" content="Modifier" %}
+                    {% bootstrap_button button_type="submit" content="Réinitialiser mon mot de passe" %}
                 </form>
+                <a href="{% url  'login' %}">Se connecter</a>
           </div>
         </div>
       </div>
